converted to landing page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 	<body>
 		<script src="node_modules/three/three.min.js"></script>
 		<script src="node_modules/three/examples/js/renderers/Projector.js"></script>
-		<script src="node_modules/three/examples/js/renderers/CanvasRenderer.js"></script>
+        <script src="node_modules/three/examples/js/renderers/CanvasRenderer.js"></script>
         <script src="js/index.js"></script>
         <div class="page">
             <div class="logo"></div>
-            <a class="button" href="https://projectkoine.github.io/projectkoine-whitepaper/projectkoine-whitepaper.pdf">
-                PERUSE WHITEPAPER
-            </a>
+            <div class="_form_1"></div>
+            <script src="https://projectkoine.activehosted.com/f/embed.php?id=1" type="text/javascript" charset="utf-8"></script>
         </div>
 	</body>
 </html>
